--- a/html/shop.html
+++ b/html/shop.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3b49034a96.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="header.css"> 
-    <link rel="stylesheet" href="shop.css">
-    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="/css/header.css"> 
+    <link rel="stylesheet" href="/css/shop.css">
+    <link rel="stylesheet" href="/css/general.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <title>Shop</title>
 </head>
    
@@ -20,9 +21,9 @@
         </label>
         <label class="logo">GameX</label>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="shop.html">Shop</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a class="active" href="/html/shop.html">Shop</a></li>
+            <li><a href="/html/about.html">About</a></li>
             <li><h1><i class=" fa fa-shopping-cart"></i></h1></li>
         </ul>
     </nav>
@@ -41,7 +42,7 @@
                 <div class="card">
                     <span></span>
                     <div class="buybtn">
-                        <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                        <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
                     <div class="prod-name">
                         <h2>Primero vandal</h2>
                         <h3>$2.00</h3>
@@ -53,7 +54,7 @@
                 <div class="card">
                     <span></span>
                     <div class="buybtn">
-                        <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                        <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
                     <div class="prod-name">
                         <h2>Product 2</h2>
                         <h3>$2.00</h3>
@@ -65,7 +66,7 @@
                 <div class="card">
                     <span></span>
                     <div class="buybtn">
-                        <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                        <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
                     <div class="prod-name">
                         <h2>Prime vandal</h2>
                         <h3>$2.00</h3>
@@ -77,7 +78,7 @@
                 <div class="card">
                     <span></span>
                     <div class="buybtn">
-                        <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                        <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
                     <div class="prod-name">
                         <h2>Primero vandal</h2>
                         <h3>$2.00</h3>
@@ -104,7 +105,7 @@
             <div class="card">
                 <span></span>
                 <div class="buybtn">
-                    <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                    <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
                 <div class="prod-name">
                     <h2>Primero vandal</h2>
                     <h3>$2.00</h3>
@@ -116,7 +117,7 @@
             <div class="card">
                 <span></span>
                 <div class="buybtn">
-                    <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                    <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
                 <div class="prod-name">
                     <h2>Primero vandal</h2>
                     <h3>$2.00</h3>
@@ -128,7 +129,7 @@
             <div class="card">
                 <span></span>
                 <div class="buybtn">
-                    <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                    <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
                 <div class="prod-name">
                     <h2>Primero vandal</h2>
                     <h3>$2.00</h3>
@@ -140,7 +141,7 @@
             <div class="card">
                 <span></span>
                 <div class="buybtn">
-                    <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                    <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
                 <div class="prod-name">
                     <h2>Primero vandal</h2>
                     <h3>$2.00</h3>
@@ -168,7 +169,7 @@
         <div class="card">
             <span></span>
             <div class="buybtn">
-                <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
             <div class="prod-name">
                 <h2>Primero vandal</h2>
                 <h3>$2.00</h3>
@@ -180,7 +181,7 @@
         <div class="card">
             <span></span>
             <div class="buybtn">
-                <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
             <div class="prod-name">
                 <h2>Primero vandal</h2>
                 <h3>$2.00</h3>
@@ -192,7 +193,7 @@
         <div class="card">
             <span></span>
             <div class="buybtn">
-                <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
             <div class="prod-name">
                 <h2>Primero vandal</h2>
                 <h3>$2.00</h3>
@@ -204,7 +205,7 @@
         <div class="card">
             <span></span>
             <div class="buybtn">
-                <div class="image"><img onclick="location.href='Product1.html'"  src="img/Prime.png" alt=""></div>
+                <div class="image"><img onclick="location.href='/html/Product1.html'"  src="/img/Prime.png" alt=""></div>
             <div class="prod-name">
                 <h2>Primero vandal</h2>
                 <h3>$2.00</h3>
@@ -229,7 +230,23 @@
      <div class="select">
 
      </div>
+
+     <footer class="footer">
+        <div class="footer-container">
+          <div class="footerlog">
+            <label class="logo">GameX</label>
+            
+          </div>
+         
+          <div class="footer-social">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+        <p class="footer-text">&copy; 2023 GameX. All rights reserved.</p>
+      </footer>
 </body>
 </html>
 
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="/js/main.js"></script>
