--- a/html/about.html
+++ b/html/about.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3b49034a96.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/header.css"> 
-    <link rel="stylesheet" href="/css/general.css">
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="./css/header.css"> 
+    <link rel="stylesheet" href="./css/general.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <title>About</title>
 </head>
    
@@ -20,9 +20,9 @@
         </label>
         <label class="logo">GameX</label>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/html/shop.html">Shop</a></li>
-            <li><a class="active" href="/html/about.html">About</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./html/shop.html">Shop</a></li>
+            <li><a class="active" href="./html/about.html">About</a></li>
             <li><h1><i class=" fa fa-shopping-cart"></i></h1></li>
         </ul>
     </nav>
