--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/3b49034a96.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/header.css"> 
-    <link rel="stylesheet" href="/css/general.css">
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="./css/header.css"> 
+    <link rel="stylesheet" href="./css/general.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <title>Home</title>
 </head>
    
@@ -21,9 +21,9 @@
         
         <label class="logo">GameX</label>
         <ul>
-            <li><a class="active" href="/index.html">Home</a></li>
-            <li><a href="/html/shop.html">Shop</a></li>
-            <li><a href="/html/about.html">About</a></li>
+            <li><a class="active" href="./index.html">Home</a></li>
+            <li><a href="./html/shop.html">Shop</a></li>
+            <li><a href="./html/about.html">About</a></li>
             <li><h1><i class=" fa fa-shopping-cart"></i></h1></li>
         </ul>
     </nav>
@@ -32,7 +32,7 @@
         <h1 class="welcome">Welcome to GameX</h1>
         <h2 class="descript">Buy online game item/services for a discounted price and a fast transaction</h2>
         <div class="btn-cont">
-        <a class="shopbtn" href="/html/shop.html">Shop now!</a>
+        <a class="shopbtn" href="./html/shop.html">Shop now!</a>
         </div>
     </div>
 
