--- a/Product1.html
+++ b/Product1.html
@@ -22,8 +22,8 @@
         <label class="logo">GameX</label>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../html/shop.html">Shop</a></li>
-            <li><a href="../html/about.html">About</a></li>
+            <li><a href="../shop.html">Shop</a></li>
+            <li><a href="../about.html">About</a></li>
             <li><h1><i class=" fa fa-shopping-cart"></i></h1></li>
             
         </ul>
