--- a/shop.html
+++ b/shop.html
@@ -169,7 +169,7 @@
         <div class="card">
             <span></span>
             <div class="buybtn">
-                <div class="image"><img onclick="location.href='../html/Product1.html'"  src="../img/Prime.png" alt=""></div>
+                <div class="image"><img onclick="location.href='../Product1.html'"  src="../img/Prime.png" alt=""></div>
             <div class="prod-name">
                 <h2>Primero vandal</h2>
                 <h3>$2.00</h3>
@@ -181,7 +181,7 @@
         <div class="card">
             <span></span>
             <div class="buybtn">
-                <div class="image"><img onclick="location.href='../html/Product1.html'"  src="../img/Prime.png" alt=""></div>
+                <div class="image"><img onclick="location.href='../Product1.html'"  src="../img/Prime.png" alt=""></div>
             <div class="prod-name">
                 <h2>Primero vandal</h2>
                 <h3>$2.00</h3>
@@ -193,7 +193,7 @@
         <div class="card">
             <span></span>
             <div class="buybtn">
-                <div class="image"><img onclick="location.href='../html/Product1.html'"  src="../img/Prime.png" alt=""></div>
+                <div class="image"><img onclick="location.href='../Product1.html'"  src="../img/Prime.png" alt=""></div>
             <div class="prod-name">
                 <h2>Primero vandal</h2>
                 <h3>$2.00</h3>
@@ -205,7 +205,7 @@
         <div class="card">
             <span></span>
             <div class="buybtn">
-                <div class="image"><img onclick="location.href='../html/Product1.html'"  src="../img/Prime.png" alt=""></div>
+                <div class="image"><img onclick="location.href='../Product1.html'"  src="../img/Prime.png" alt=""></div>
             <div class="prod-name">
                 <h2>Primero vandal</h2>
                 <h3>$2.00</h3>
