--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <label class="logo">GameX</label>
         <ul>
             <li><a class="active" href="./index.html">Home</a></li>
-            <li><a href="./html/shop.html">Shop</a></li>
-            <li><a href="./html/about.html">About</a></li>
+            <li><a href="./shop.html">Shop</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><h1><i class=" fa fa-shopping-cart"></i></h1></li>
         </ul>
     </nav>
@@ -32,7 +32,7 @@
         <h1 class="welcome">Welcome to GameX</h1>
         <h2 class="descript">Buy online game item/services for a discounted price and a fast transaction</h2>
         <div class="btn-cont">
-        <a class="shopbtn" href="./html/shop.html">Shop now!</a>
+        <a class="shopbtn" href="./shop.html">Shop now!</a>
         </div>
     </div>
 
